# mobile-apriltag-detection

./: .gitignore  build.gradle  gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ApriltagTower.c  PoseMath.c  PoseMath.h  test.c
app/src/main/java/: Result.kt  TransformPacket.kt  apriltag.kt
app/src/main/java/com/example/android/camerax/video/: MainActivity.kt
app/src/main/java/com/example/android/camerax/video/fragments/: CaptureFragment.kt  PermissionsFragment.kt
app/src/main/res/layout/: fragment_capture.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
